[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A description of your project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.1"
qdrant-client = "^1.9.0"
pandas = "^2.2.2"
sentence-transformers = "^3.0.0"
loguru = "^0.7.2"
datasets = "^2.19.1"
pyarrow = "^16.1.0"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
